--- a/qa-dcp.planx-pla.net/manifest.json
+++ b/qa-dcp.planx-pla.net/manifest.json
@@ -351,7 +351,7 @@
   "guppy": {
     "indices": [
       {
-        "index": "qa-dcp_etl",
+        "index": "qa-dcp_subject",
         "type": "subject"
       },
       {
