Add auto scaling for metadata in jenkins-perf

--- a/jenkins-perf.planx-pla.net/manifest.json
+++ b/jenkins-perf.planx-pla.net/manifest.json
@@ -118,6 +118,9 @@
     "indexd": {
       "strategy": "auto"
     },
+    "metadata": {
+      "strategy": "auto"
+    },
     "peregrine": {
       "strategy": "auto"
     },
