--- a/qa-dcp.planx-pla.net/manifest.json
+++ b/qa-dcp.planx-pla.net/manifest.json
@@ -25,7 +25,7 @@
     "wts": "707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/workspace-token-service:integration202506",
     "guppy": "707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/guppy:integration202506",
     "sower": "707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/sower:integration202506",
-    "hatchery": "707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/hatchery:2integration202506",
+    "hatchery": "707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/hatchery:integration202506",
     "metadata": "707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/metadata-service:integration202506",
     "requestor": "707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/requestor:integration202506",
     "gen3-user-data-library": "707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/gen3-user-data-library:main"
