Match configs with staging and get QA ready to be used for testing.

--- a/qa-midrc.planx-pla.net/etlMapping.yaml
+++ b/qa-midrc.planx-pla.net/etlMapping.yaml
@@ -304,6 +304,9 @@ mappings:
           - name: _dataset_id
             src: id
             fn: set
+          - name: dataset_submitter_id
+            src: submitter_id
+            fn: set
           - name: license
             src: license
             fn: set
