--- a/qa-vpodc.planx-pla.net/manifest.json
+++ b/qa-vpodc.planx-pla.net/manifest.json
@@ -59,15 +59,15 @@
     "guppy": {
         "indices": [
             {
-                "index": "etl_mickey",
-                "type": "patients"
+                "index": "vpodc_subject",
+                "type": "subject"
             },
             {
-                "index": "file_etl_mickey",
-                "type": "file"
+                "index": "vpodc_data_file",
+                "type": "data_file"
             }
         ],
-        "config_index": "etl_mickey_array-config",
+        "config_index": "vpodc_array-config",
         "auth_filter_field": "auth_resource_path"
     },
     "metadata": {
