--- a/qa-vpodc.planx-pla.net/manifest.json
+++ b/qa-vpodc.planx-pla.net/manifest.json
@@ -26,6 +26,7 @@
         "requestor": "707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/requestor:2025.04",
         "revproxy": "707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/nginx:2025.04",
         "sheepdog": "707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/sheepdog:2025.04",
+        "spark": "707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/gen3-spark:2025.04",
         "tube": "707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/tube:2025.04",
         "wts": "707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/workspace-token-service:2025.04"
     },
