--- a/.github/workflows/integration_tests.yaml
+++ b/.github/workflows/integration_tests.yaml
@@ -8,7 +8,7 @@ concurrency:
 
 jobs:
   integration_tests:
-    name: Integration tests
+    name: Integration test
     uses: uc-cdis/.github/.github/workflows/integration_tests.yaml@master
     secrets:
       CI_AWS_ACCESS_KEY_ID: ${{ secrets.CI_AWS_ACCESS_KEY_ID }}
