--- a/qa-vpodc.planx-pla.net/manifest.json
+++ b/qa-vpodc.planx-pla.net/manifest.json
@@ -61,8 +61,8 @@
     "guppy": {
         "indices": [
             {
-                "index": "vpodc_patient",
-                "type": "patient"
+                "index": "vpodc_case",
+                "type": "case"
             },
             {
                 "index": "vpodc_data_file",
