--- a/qa-prometheus.planx-pla.net/manifest.json
+++ b/qa-prometheus.planx-pla.net/manifest.json
@@ -18,7 +18,7 @@
         "hatchery": "707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/hatchery:2025.04",
         "indexd": "707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/indexd:2025.04",
         "manifestservice": "707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/manifestservice:2025.04",
-        "metadata": "707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/metadata-service:2025.04",
+        "metadata": "707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/metadata-service:master",
         "peregrine": "707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/peregrine:2025.04",
         "requestor": "707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/requestor:2025.04",
         "revproxy": "707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/nginx:2025.04",
