--- a/qa-prometheus.planx-pla.net/metadata/aggregate_config.json
+++ b/qa-prometheus.planx-pla.net/metadata/aggregate_config.json
@@ -49,8 +49,8 @@
             "subject_chemical_agents_of_exposure": {},
             "prometheus_global_id": {},
             "studies": {
-		"type": "array"
-	    }
+                "type": "array"
+            }
         },
         "settings": {
             "cache_drs": true
@@ -414,17 +414,15 @@
             },
             "per_item_values": {
                 "synth_12345": {
-                    {
-                        "__manifest": [
-                            {
-                                "md5": "44d8497a87b5bb040b09699899b57bff",
-                                "file_name": "synth_12345",
-                                "file_size": 39953,
-                                "object_id": "f5d75619-93fc-4cdb-87e3-4e44523d7a4b",
-                                "commons_url": "vpodc.data-commons.org"
-                            }
-                        ]
-                    }
+                    "__manifest": [
+                        {
+                            "md5": "44d8497a87b5bb040b09699899b57bff",
+                            "file_name": "synth_12345",
+                            "file_size": 39953,
+                            "object_id": "f5d75619-93fc-4cdb-87e3-4e44523d7a4b",
+                            "commons_url": "vpodc.data-commons.org"
+                        }
+                    ]
                 }
             }
         },
@@ -1018,8 +1016,8 @@
                             "Not Reported": "Not Reported",
                             "DECLINED TO ANSWER": "Declined to Answer",
                             "HISPANIC OR LATINO": "Hispanic or Latino",
-                            "Not Spanish/Hispanic/Latino" : "Not Hispanic or Latino",
-                            "Unknown" : "Unknown"
+                            "Not Spanish/Hispanic/Latino": "Not Hispanic or Latino",
+                            "Unknown": "Unknown"
                         }
                     },
                     "default": ""
@@ -1032,7 +1030,7 @@
                 "data_source": "Windber",
                 "commons_url": "externalgen3.prometheus.data-commons.org",
                 "prometheus_global_id": "path:prometheus_global_id",
-                "is_synthetic": "Yes",
+                "is_synthetic": "Yes"
             }
         }
     }
