--- a/qa-prometheus.planx-pla.net/manifest.json
+++ b/qa-prometheus.planx-pla.net/manifest.json
@@ -70,11 +70,11 @@
     "guppy": {
       "indices": [
       {
-        "index": "pdp-commons-index",
+        "index": "pdp-commons-commons-index",
         "type": "metadata"
       }
     ],
-    "config_index": "pdp-commons-config-index"
+    "config_index": "pdp-commons-commons-config-index"
     },
     "canary": {
         "default": 0
