--- a/qa-prometheus.planx-pla.net/manifest.json
+++ b/qa-prometheus.planx-pla.net/manifest.json
@@ -15,7 +15,7 @@
         "fluentd": "fluent/fluentd-kubernetes-daemonset:v1.15.3-debian-cloudwatch-1.0",
         "frontend-framework": "quay.io/cdis/mc2dp-data-platform:chore_update_gff_0.10.99",
         "gen3-user-data-library": "707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/gen3-user-data-library:1.1.0",
-        "guppy": "707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/guppy:2025.05",
+        "guppy": "quay.io/cdis/guppy:2025.07",
         "hatchery": "707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/hatchery:2025.04",
         "indexd": "707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/indexd:2025.04",
         "manifestservice": "707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/manifestservice:2025.04",
