--- a/qa-prometheus.planx-pla.net/manifest.json
+++ b/qa-prometheus.planx-pla.net/manifest.json
@@ -44,8 +44,7 @@
         "kube_bucket": "kube_bucket.devplanetv1.gen3",
         "logs_bucket": "logs-devplanetv1-gen3",
         "useryaml_s3path": "s3://cdis-gen3-users/pdp/user.yaml",
-        "tier_access_level": "regular",
-        "tier_access_limit": 50,
+        "tier_access_level": "libre",
         "public_datasets": true,
         "netpolicy": "on",
         "argocd": "true",
@@ -74,7 +73,7 @@
         "type": "metadata"
       }
     ],
-    "config_index": "pdp-commons-commons-config-index"
+    "config_index": "pdp-commons-commons-config-index",
     },
     "canary": {
         "default": 0
