--- a/qa-prometheus.planx-pla.net/metadata/aggregate_config.json
+++ b/qa-prometheus.planx-pla.net/metadata/aggregate_config.json
@@ -1072,9 +1072,9 @@
       "field_mappings": {
         "authz": "",
         "tags": "path:tags",
-        "_unique_id": "path:_unique_id",
+        "_unique_id": "path:external_windber_id",
         "commons": "path:commons",
-        "subject_id": "path:_unique_id",
+        "subject_id": "path:external_windber_id",
         "subject_apollo_id": "path:apollo_id",
         "subject_race": "path:race",
         "subject_gender": {
